[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# we need the bootloader crate to create an image with a bootloader to load our kernel. To make 
# use of this, we need to install the tool named bootimage
# the spinlock is a very basic mutex, that does not need support by an operating system
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

# the following code removes all stack unwinding, so the eh_personality language item is not
# longer required for the build process
[profile.dev]
panic = "abort"

# in Cargo.toml
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
panic = "abort"
